feat: implement active button and record in localStorage

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
         <header class="header">
                 <nav class="navigation-menu">
-                    <div class="nav-icon"><img src="./src/assets/nav-icon.svg" alt="navigation"></div>
+                    <div class="nav-icon"><img src="./palette/assets/nav-icon.svg" alt="navigation"></div>
                     <h1 class="header-text">CodeJam-Palette</h1>
-                    <div class="menu"><img class="menu-icon" src="./src/assets/menu-icon.svg" alt="menu"></div>
+                    <div class="menu"><img class="menu-icon" src="./palette/assets/menu-icon.svg" alt="menu"></div>
                 </nav>
             </header>
             <main>
                 <section class="button-control">
                     <section class="palette">
                             <div class="button-group-vertical">
-                                <button type="button" class="button button__paint-bucket"> <img class="button__icon icon-bucket" src="./src/assets/icon-butt.svg" alt="bucket" >Paint bucket</button>
-                                <button type="button" class="button button__choose-color"> <img class="button__icon icon-color" src="./src/assets/icon-picket.svg" alt="">Choose color</button>
-                                <button type="button" class="button button__move"> <img class="button__icon icon-move" src="./src/assets/icon-move.svg" alt="">Move</button>
-                                <button type="button" class="button button__transform"> <img class="button__icon icon-transform" src="./src/assets/icon-transform.svg" alt="">Transform</button>
+                                <button type="button" class="button button__paint-bucket" id="button__palette"> <img class="button__icon icon-bucket" src="./palette/assets/icon-butt.svg" alt="bucket" >Fill bucket</button>
+                                <button type="button" class="button button__choose-color" id="button__palette"> <img class="button__icon icon-color" src="./palette/assets/icon-picket.svg" alt="">Choose color</button>
+                                <button type="button" class="button button__pencil" id="button__palette"> <img class="button__icon icon-pencil" src="./palette/assets/pencil-edit-button.svg" alt="">Pencil</button>
+                                <button type="button" class="button button__transform" id="button__palette"> <img class="button__icon icon-transform" src="./palette/assets/icon-transform.svg" alt="">Transform</button>
                             </div>
                     </section>
         
