--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         
                     <section class="color">
                             <div class="button-group-vertical">
-                                <button type="button" class="button button__current-color"><div class="button__circle circle-color" ></div> Current color</button>
-                                <button type="button" class="button button__prev-color"><div class="button__circle circle-prev-color" ></div> Prev color</button>
-                                <button type="button" class="button button__user-color-1"><div class="button__circle circle-user-color1" ></div> User color 1</button>
-                                <button type="button" class="button button__user-color-1"><div class="button__circle circle-user-color2" ></div> User color 2</button>
+                                <button type="button" class="button button__current-color" id="button__color"><div class="button__circle circle-color" ></div> Current color</button>
+                                <button type="button" class="button button__prev-color" id="button__color"><div class="button__circle circle-prev-color" ></div> Prev color</button>
+                                <button type="button" class="button button__user-color-1" id="button__color"><div class="button__circle circle-user-color1" ></div> User color 1</button>
+                                <button type="button" class="button button__user-color-1" id="button__color"><div class="button__circle circle-user-color2" ></div> User color 2</button>
                             </div>
                     </section>
                 </section>
                 <section class="section__canvas">
-                    <canvas id="canvas4" width="512" height="512"></canvas>
+                    <canvas id="canvas4" class="canvas" width="512" height="512"></canvas>
                 </section>
             </main>
         
