feat: implement button choose color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='./dist/style.css'>
     <title>Codejam-Palette</title>
 </head>
-<body>
+<body id="capture">
         <header class="header">
                 <nav class="navigation-menu">
                     <div class="nav-icon"><img src="./palette/assets/nav-icon.svg" alt="navigation"></div>
