--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
                     <section class="palette">
                             <div class="button-group-vertical">
                                 <button type="button" class="button button__paint-bucket" id="button__palette"> <img class="button__icon icon-bucket" src="./palette/assets/icon-butt.svg" alt="bucket" >Fill bucket</button>
-                                <button type="button" class="button button__choose-color" id="button__palette"> <img class="button__icon icon-color" src="./palette/assets/icon-picket.svg" alt="">Choose color</button>
+                                <button type="button" class="button button__choose-color" id="button__palette"> 
+                                    <input type="color" id="input__choose-color" name="input__choose-color" value='#ffffff'> 
+                                    <label class="label__choose-color" for="input__choose-color">
+                                            <img class="button__icon icon-color" src="./palette/assets/icon-picket.svg" alt="icon choose color">
+                                    </label>
+                                    Choose color
+                                </button>
                                 <button type="button" class="button button__pencil" id="button__palette"> <img class="button__icon icon-pencil" src="./palette/assets/pencil-edit-button.svg" alt="">Pencil</button>
                                 <button type="button" class="button button__transform" id="button__palette"> <img class="button__icon icon-transform" src="./palette/assets/icon-transform.svg" alt="">Transform</button>
                             </div>
