feat: add to activate (choose) the tool by pressing keyboard button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <button type="button" class="button button__choose-color" id="button__palette"> 
                                     <input type="color" id="input__choose-color" name="input__choose-color" value='#ffffff'> 
                                     <label class="label__choose-color" for="input__choose-color">
-                                            <img class="button__icon icon-color" src="./palette/assets/icon-picket.svg" alt="icon choose color">
+                                            <img class="button__icon icon-color" id="icon-color" src="./palette/assets/icon-picket.svg" alt="icon choose color">
                                     </label>
                                     Choose color
                                 </button>
