--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
                     <canvas id="canvas4" class="canvas" width="512" height="512"></canvas>
                 </section>
             </main>
-        
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
+    <script>
+      mocha.setup('bdd');
+    </script>
     <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
