feat: local storage: save current app state to restore it after the page reload

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                     </section>
                 </section>
                 <section class="section__canvas">
-                    <canvas id="canvas4" class="canvas" width="512" height="512"></canvas>
+                    <canvas id="canvas4" class="canvas" width="512" height="512">
+                        <img id="load__img"  alt="img_canvas">
+                    </canvas>
                 </section>
             </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
